--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@reown/appkit": "^1.0.2",
+    "@reown/appkit-adapter-wagmi": "^1.0.2",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.56.2",
+    "@wagmi/core": "^2.13.5",
     "@web3modal/wagmi": "^5.1.9",
     "@worldcoin/idkit": "^1.3.0",
     "class-variance-authority": "^0.7.0",
