--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "backend",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun run --hot src/index.ts"
   },
   "dependencies": {
     "@worldcoin/idkit": "^1.3.0",
